Fix horizontal scrolling bug.

--- a/css/skills.css
+++ b/css/skills.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px 20px;
+    padding: 50px 0px;
 }
 #skills section {
     display: flex;
